270 - Jump Links - fixing spacing issue on mobile

--- a/styleguide/source/assets/scss/03-organisms/_jump-links.scss
+++ b/styleguide/source/assets/scss/03-organisms/_jump-links.scss
@@ -120,7 +120,7 @@
   &__link {
     line-height: 1.2;
     display: block;
-    margin-bottom: .35em;
+    padding-bottom: .35em;
     padding-left: 35px;
     position: relative;
 
